Nebenhand Schadensschwelle korrigiert

--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -7167,7 +7167,7 @@
 								<option value="@{GE_Wert}" data-i18n="GE">GE</option>
 							</select></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeSchadensberechnung1" value="0"></td>
-						<td class="padding-1"><input style="width: 3em;" type="number" disabled="true" name="attr_Parierwaffe1_SB" value="(((@{GE_Wert} - @{ParierwaffeSchadensberechnung1}) + abs(@{GE_Wert} - @{ParierwaffeSchadensberechnung1})) / 2)"></td>
+						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_Parierwaffe1_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP1_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP1_2" value="0"></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeATMod1" value="0"></td>
@@ -7190,7 +7190,7 @@
 						<td class="padding-1"><select name="attr_Parierwaffentyp2" style="width: 6em">
 								<option value="0" data-i18n="---">---</option>
 								<option value="@{KtW_Dolche}" data-i18n="Dolche">Dolche</option>
-								<option value="@{KtW_Fechtwaffen}" data-i18n="Feenfreund">Fechtwaffen</option>
+								<option value="@{KtW_Fechtwaffen}" data-i18n="Fechtwaffen">Fechtwaffen</option>
 								<option value="@{KtW_Hiebwaffen}" data-i18n="Hiebwaffen">Hiebwaffen</option>
 								<option disabled="true" value="@{KtW_Kettenwaffen}" data-i18n="Kettenwaffen">Kettenwaffen</option>
 								<option disabled="true" value="@{KtW_Lanzen}" data-i18n="Lanzen">Lanzen</option>
@@ -7206,7 +7206,7 @@
 								<option value="@{GE_Wert}" data-i18n="GE">GE</option>
 							</select></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeSchadensberechnung2"></td>
-						<td class="padding-1"><input style="width: 3em;" type="number" disabled="true" name="attr_Parierwaffe2_SB" value="(((@{GE_Wert} - @{ParierwaffeSchadensberechnung2}) + abs(@{GE_Wert} - @{ParierwaffeSchadensberechnung2})) / 2)"></td>
+						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_Parierwaffe2_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP2_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP2_2" value="0"></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeATMod2" value="0"></td>
@@ -7245,7 +7245,7 @@
 								<option value="@{GE_Wert}" data-i18n="GE">GE</option>
 							</select></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeSchadensberechnung3"></td>
-						<td class="padding-1"><input style="width: 3em;" type="number" disabled="true" name="attr_Parierwaffe3_SB" value="(((@{GE_Wert} - @{ParierwaffeSchadensberechnung3}) + abs(@{GE_Wert} - @{ParierwaffeSchadensberechnung3})) / 2)"></td>
+						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_Parierwaffe3_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP3_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP3_2" value="0"></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeATMod3" value="0"></td>
@@ -7284,7 +7284,7 @@
 								<option value="@{GE_Wert}" data-i18n="GE">GE</option>
 							</select></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeSchadensberechnung4"></td>
-						<td class="padding-1"><input style="width: 3em;" type="number" disabled="true" name="attr_Parierwaffe4_SB" value="(((@{GE_Wert} - @{ParierwaffeSchadensberechnung4}) + abs(@{GE_Wert} - @{ParierwaffeSchadensberechnung4})) / 2)"></td>
+						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_Parierwaffe4_SB" value="0" readonly></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP4_1" value="0"><span data-i18n="W6-Plus">W6+</span></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeTP4_2" value="0"></td>
 						<td class="padding-1"><input style="width: 3em;" type="number" name="attr_ParierwaffeATMod4" value="0"></td>
@@ -7627,6 +7627,7 @@
 						<input name="attr_TP_Bonus_Aktiv_Schild" type="number" value="0" style="display:none;" />
 						<input name="attr_Leiteigenschaft_AT_Mod" type="number" value="0" style="display:none;" />
 						<input name="attr_SchildPAMod_Aktiv" type="number" value="0" style="display:none;" />
+						<input name="attr_TP_Bonus_Aktiv_Parierwaffe" type="number" value="0" style="display:none;" />
 						<input type="checkbox" class="hidden sheet-zeige-parierwaffen" name="attr_parierwaffe_ausgeruestet" value="1" />
 						<div>
 							<div style="display:inline-block; width:7em" data-i18n="Attacke"><b>Attacke</b></div>
@@ -17988,16 +17989,15 @@
 <script type="text/worker">
 
 // Update LE_Grundwert und LE_Wert_max, wenn sich ein Parameter ändert der in die Berechnung einfliesst.
-on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vorteil_hohe_lebenskraft_stufe change:nachteil_niedrige_lebenskraft change:nachteil_niedrige_lebenskraft_stufe change:le_zukauf", function() {
+on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vorteil_hohe_lebenskraft_stufe change:nachteil_niedrige_lebenskraft change:nachteil_niedrige_lebenskraft_stufe change:le_zukauf sheet:opened", function() {
 	getAttrs(["LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
-	var i ;
-	i = 0 ;
+	var i = 0 ;
 	i += parseInt(values.LE_Spezies) + (2 * parseInt(values.KO_Wert)) + parseInt(values.LE_Zukauf) ;
 		if (values.vorteil_hohe_lebenskraft == 1) {
-			i += parseInt(values.vorteil_hohe_lebenskraft_stufe) ;
+			i += parseInt(values.vorteil_hohe_lebenskraft_stufe||0) ;
 		}
 		else if (values.nachteil_niedrige_lebenskraft == 1) {
-			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe) ;
+			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe||0) ;
 		}	
 	setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
 	});
@@ -18008,6 +18008,19 @@ on("change:schmerz", function(eventInfo) {
 		var a = (parseInt(eventInfo.previousValue)||0) ;
 		setAttrs({ Schmerz: a }) ;
 	}
+});
+
+// LE_Wert kann nicht höher sein als Maximum(LE_Grundwert)
+on("change:le_wert change:le_grundwert", function(eventInfo) {
+	getAttrs(["LE_Wert", "LE_Grundwert"], function(values) {
+	if (parseInt(values.LE_Wert||0) > parseInt(values.LE_Grundwert||0)) {
+		if (eventInfo.sourceAttribute == "le_wert") {
+			setAttrs({ LE_Wert: parseInt(eventInfo.previousValue||0) }) ;
+		} else {
+			setAttrs({ LE_Wert: parseInt(values.LE_Grundwert||0) }) ;
+		}
+	}
+	});	
 });
 
 //automatisch Schmerzstufe ermitteln
@@ -18246,6 +18259,50 @@ on("change:tradition_goetter_leiteigenschaft change:KL_Wert change:IN_Wert chang
 	});
 }); 
 
+//Schadensbonus Leiteigenschaft für Nebenhand
+on("sheet:opened change:parierwaffe1_leiteigenschaft change:parierwaffe2_leiteigenschaft change:change:parierwaffe3_leiteigenschaft change:parierwaffe4_leiteigenschaft change:parierwaffeschadensberechnung1 change:parierwaffeschadensberechnung2 change:parierwaffeschadensberechnung3 change:parierwaffeschadensberechnung4 change:ge_wert change:kk_wert", function() {
+	getAttrs(["Parierwaffe1_Leiteigenschaft", "Parierwaffe2_Leiteigenschaft", "Parierwaffe3_Leiteigenschaft", "Parierwaffe4_Leiteigenschaft", "ParierwaffeSchadensberechnung1", "ParierwaffeSchadensberechnung2", "ParierwaffeSchadensberechnung3", "ParierwaffeSchadensberechnung4", "GE_Wert", "KK_Wert"], function(values) {
+		if (parseInt(values.Parierwaffe1_Leiteigenschaft||0) != 0 && parseInt(values.ParierwaffeSchadensberechnung1||0) != 0) {
+			if (values.Parierwaffe1_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ Parierwaffe1_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung1||0), 0) }) ;
+			} else {
+				setAttrs({ Parierwaffe1_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung1||0), 0) }) ;
+			}
+		} else {
+				setAttrs({ Parierwaffe1_SB: 0 }) ;
+		}
+		if (parseInt(values.Parierwaffe2_Leiteigenschaft||0) != 0 && parseInt(values.ParierwaffeSchadensberechnung2||0) != 0) {
+			if (values.Parierwaffe2_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ Parierwaffe2_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung2||0), 0) }) ;
+			} else {
+				setAttrs({ Parierwaffe2_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung2||0), 0) }) ;
+			}
+		} else {
+				setAttrs({ Parierwaffe2_SB: 0 }) ;
+		}
+		if (parseInt(values.Parierwaffe3_Leiteigenschaft||0) != 0 && parseInt(values.ParierwaffeSchadensberechnung3||0) != 0) {
+			if (values.Parierwaffe3_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ Parierwaffe3_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung3||0), 0) }) ;
+			} else {
+				setAttrs({ Parierwaffe3_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung3||0), 0) }) ;
+			}
+		} else {
+				setAttrs({ Parierwaffe3_SB: 0 }) ;
+		}
+		if (parseInt(values.Parierwaffe4_Leiteigenschaft||0) != 0 && parseInt(values.ParierwaffeSchadensberechnung4||0) != 0) {
+			if (values.Parierwaffe4_Leiteigenschaft == "@{GE_Wert}") {
+				setAttrs({ Parierwaffe4_SB: Math.max(parseInt(values.GE_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung4||0), 0) }) ;
+			} else {
+				setAttrs({ Parierwaffe4_SB: Math.max(parseInt(values.KK_Wert||0) - parseInt(values.ParierwaffeSchadensberechnung4||0), 0) }) ;
+			}
+		} else {
+				setAttrs({ Parierwaffe4_SB: 0 }) ;
+		}
+	});
+});
+
+
+// Schadensbonus Leiteigenschaft für Haupthand
 on("change:nkw1_leiteigenschaft change:schadensberechnungwertnkw1 change:nkw2_leiteigenschaft change:schadensberechnungwertnkw2 change:nkw3_leiteigenschaft change:schadensberechnungwertnkw3 change:nkw4_leiteigenschaft change:schadensberechnungwertnkw4 change:kk_wert change:ge_wert", function() {
 	getAttrs(["NKW1_Leiteigenschaft", "SchadensberechnungWertNKW1", "NKW2_Leiteigenschaft", "SchadensberechnungWertNKW2", "NKW3_Leiteigenschaft", "SchadensberechnungWertNKW3", "NKW4_Leiteigenschaft", "SchadensberechnungWertNKW4", "KK_Wert", "GE_Wert"], function(values) {
 		if (values.NKW1_Leiteigenschaft == "@{GE_Wert}") {
@@ -18284,6 +18341,7 @@ on("change:nkw1_leiteigenschaft change:schadensberechnungwertnkw1 change:nkw2_le
 		if (values.NKW4_Leiteigenschaft == 0) {
 			setAttrs({ NKW4_SB: 0 });
 			}
+		cosole.log(parseInt(values.NKW1_Leiteigenschaft)) ;
 	});
 });
 
@@ -18305,14 +18363,15 @@ on("change:nkw_aktiv change:at_nkw1 change:at_nkw2 change:at_nkw3 change:at_nkw4
 });	
 
 //Berechne Bonusschaden aufgrund Leiteigenschaft für alle Schilde
-on("change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4 change:KK_Wert", function() {
+on("change:schildschadensberechnung1 change:schildschadensberechnung2 change:schildschadensberechnung3 change:schildschadensberechnung4 change:KK_Wert sheet:opened", function() {
 	getAttrs(["Schildschadensberechnung1", "Schildschadensberechnung2", "Schildschadensberechnung3", "Schildschadensberechnung4", "KK_Wert"], function(values) {
-		var zuweisung = ""; 
+		var zuweisung = "setAttrs({" ; 
 		var i;
 		for (i = 1; i < 5; i++) {
 				zuweisung += "Schild" + i + "_SB: Math.max(parseInt(values.KK_Wert) - parseInt(values.Schildschadensberechnung" + i + "), 0), " ;
 			}
-		eval("setAttrs({ " + zuweisung + " })");
+		zuweisung += "}) ;"
+		eval(zuweisung) ;
 	}); 
 });
 
@@ -18333,22 +18392,21 @@ on("change:schild_aktiv change:SchildAT1 change:SchildAT2 change:SchildAT3 chang
 	}); 
 });
 
-on("change:parierwaffe_aktiv change:parierwaffepamod1 change:parierwaffepamod2 change:parierwaffepamod3 change:parierwaffepamod4 change:parierwaffe_ausgeruestet change:parierwaffeat1 change:parierwaffeat2 change:parierwaffeat3 change:parierwaffeat4 change:parierwaffepa1 change:parierwaffepa2 change:parierwaffepa3 change:parierwaffepa4 change:parierwaffetp1_1 change:parierwaffetp1_2 change:parierwaffetp2_1 change:parierwaffetp2_2 change:parierwaffetp3_1 change:parierwaffetp3_2 change:parierwaffetp4_1 change:parierwaffetp4_2", function() {
-	getAttrs(["Parierwaffe_Aktiv", "ParierwaffePAMod1", "ParierwaffePAMod2", "ParierwaffePAMod3", "ParierwaffePAMod4", "parierwaffe_ausgeruestet", "ParierwaffeAT1", "ParierwaffeAT2", "ParierwaffeAT3", "ParierwaffeAT4", "ParierwaffePA1", "ParierwaffePA2", "ParierwaffePA3", "ParierwaffePA4", "ParierwaffeTP1_1", "ParierwaffeTP1_2", "ParierwaffeTP2_1", "ParierwaffeTP2_2", "ParierwaffeTP3_1", "ParierwaffeTP3_2", "ParierwaffeTP4_1", "ParierwaffeTP4_2"], function(values) {
+on("change:parierwaffe_aktiv change:parierwaffepamod1 change:parierwaffepamod2 change:parierwaffepamod3 change:parierwaffepamod4 change:parierwaffe_ausgeruestet change:parierwaffeat1 change:parierwaffeat2 change:parierwaffeat3 change:parierwaffeat4 change:parierwaffepa1 change:parierwaffepa2 change:parierwaffepa3 change:parierwaffepa4 change:parierwaffetp1_1 change:parierwaffetp1_2 change:parierwaffetp2_1 change:parierwaffetp2_2 change:parierwaffetp3_1 change:parierwaffetp3_2 change:parierwaffetp4_1 change:parierwaffetp4_2 change:parierwaffe1_sb change:parierwaffe2_sb change:parierwaffe3_sb change:parierwaffe4_sb", function() {
+	getAttrs(["Parierwaffe_Aktiv", "ParierwaffePAMod1", "ParierwaffePAMod2", "ParierwaffePAMod3", "ParierwaffePAMod4", "parierwaffe_ausgeruestet", "ParierwaffeAT1", "ParierwaffeAT2", "ParierwaffeAT3", "ParierwaffeAT4", "ParierwaffePA1", "ParierwaffePA2", "ParierwaffePA3", "ParierwaffePA4", "ParierwaffeTP1_1", "ParierwaffeTP1_2", "ParierwaffeTP2_1", "ParierwaffeTP2_2", "ParierwaffeTP3_1", "ParierwaffeTP3_2", "ParierwaffeTP4_1", "ParierwaffeTP4_2", "Parierwaffe1_SB", "Parierwaffe2_SB", "Parierwaffe3_SB", "Parierwaffe4_SB"], function(values) {
 		if (values.parierwaffe_ausgeruestet == 1) {
-			var aktiv = values.Parierwaffe_Aktiv;
+			var aktiv = values.Parierwaffe_Aktiv ;
 			if (aktiv == 1) {
-				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT1, PA_Aktiv_Parierwaffe: values.ParierwaffePA1, PA_Parierwaffe_Bonus: values.ParierwaffePAMod1, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA1, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP1_1, TP_Bonus_Aktiv_Parierwaffe: values. ParierwaffeTP1_2 });
+				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT1, PA_Aktiv_Parierwaffe: values.ParierwaffePA1, PA_Parierwaffe_Bonus: values.ParierwaffePAMod1, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA1, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP1_1, TP_Bonus_Aktiv_Parierwaffe: parseInt(values.Parierwaffe1_SB) + parseInt(values.ParierwaffeTP1_2) });
 			}
 			if (aktiv == 2) {
-				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT2, PA_Aktiv_Parierwaffe: values.ParierwaffePA2, PA_Parierwaffe_Bonus: values.ParierwaffePAMod2, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA2, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP2_1, TP_Bonus_Aktiv_Parierwaffe: values. ParierwaffeTP2_2 });
+				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT2, PA_Aktiv_Parierwaffe: values.ParierwaffePA2, PA_Parierwaffe_Bonus: values.ParierwaffePAMod2, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA2, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP2_1, TP_Bonus_Aktiv_Parierwaffe: parseInt(values.Parierwaffe2_SB) + parseInt(values.ParierwaffeTP2_2) });
 			}
 			if (aktiv == 3) {
-				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT3, PA_Aktiv_Parierwaffe: values.ParierwaffePA3, PA_Parierwaffe_Bonus: values.ParierwaffePAMod3, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA3, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP3_1, TP_Bonus_Aktiv_Parierwaffe: values. ParierwaffeTP3_2
-				});
+				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT3, PA_Aktiv_Parierwaffe: values.ParierwaffePA3, PA_Parierwaffe_Bonus: values.ParierwaffePAMod3, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA3, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP3_1, TP_Bonus_Aktiv_Parierwaffe: parseInt(values.Parierwaffe3_SB) + parseInt(values.ParierwaffeTP3_2) });
 			}
 			if (aktiv == 4) {
-				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT4, PA_Aktiv_Parierwaffe: values.ParierwaffePA4, PA_Parierwaffe_Bonus: values.ParierwaffePAMod4, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA4, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP4_1, TP_Bonus_Aktiv_Parierwaffe: values. ParierwaffeTP4_2 });
+				setAttrs({ AT_Aktiv_Parierwaffe: values.ParierwaffeAT4, PA_Aktiv_Parierwaffe: values.ParierwaffePA4, PA_Parierwaffe_Bonus: values.ParierwaffePAMod4, Parierwaffe_PA_Aktiv_Ausgeruestet: values.ParierwaffePA4, TP_W_Aktiv_Parierwaffe: values.ParierwaffeTP4_1, TP_Bonus_Aktiv_Parierwaffe: parseInt(values.Parierwaffe4_SB) + parseInt(values.ParierwaffeTP4_2) });
 			}
 		} else {
 			setAttrs({ PA_Parierwaffe_Bonus: 0, Parierwaffe_PA_Aktiv_Ausgeruestet: 0 });
