--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -27,6 +27,7 @@
 					<li>General Tab. Fix rounding error for jumping distance.</li>
 					<li>General Tab. Allow negative values for Air Move modifier and Water Move modifiers. Reported by James W.</li>
 					<li>Combat Tab. Active Defenses. Hide checkbox when the Modify button is clicked. Reported by Charles.</li>
+					<li>Combat Tab. Active Defenses. Fix alignment issues. Verified on Chrome, Firefox, MS Edge (chromium)</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset">View All Updates</button>
@@ -5415,7 +5416,7 @@
     					    <input type="text" value="TNT" name="attr_demo_how_much_type" title="Macro name: demo_how_much_type" />
     					</div>
     				    <div class="cell input">
-    					    <input type="number" value="1.0" min="0" name="attr_demo_how_much_ref" title="Macro name: demo_how_much_ref" />
+    					    <input type="number" value="1.0" min="0" step=".01" name="attr_demo_how_much_ref" title="Macro name: demo_how_much_ref" />
     					</div>
     				    <div class="cell input">
     					    <input type="number" value="1" readonly="readonly" name="attr_demo_how_much_weight" title="Macro name: demo_how_much_weight" />
@@ -5476,10 +5477,10 @@
     					    <input type="text" value="TNT" name="attr_demo_how_big_type" title="Macro name: demo_how_big_type" />
     					</div>
     				    <div class="cell input">
-    					    <input type="number" value="1.0" min="0" name="attr_demo_how_big_ref" title="Macro name: demo_how_big_ref" />
+    					    <input type="number" value="1.0" min="0" step=".01" name="attr_demo_how_big_ref" title="Macro name: demo_how_big_ref" />
     					</div>
     				    <div class="cell input">
-    					    <input type="number" value="1" name="attr_demo_how_big_weight" title="Macro name: demo_how_big_weight" />
+    					    <input type="number" value="1" min=".01" step=".01" name="attr_demo_how_big_weight" title="Macro name: demo_how_big_weight" />
     					</div>
     					<div class="cell input">
     					    <input type="text" value="6d6" name="attr_demo_how_big_base_damage" title="Macro name: demo_how_big_base_damage" />
@@ -6079,6 +6080,7 @@
 		<li>General Tab. Fix rounding error for jumping distance.</li>
 		<li>General Tab. Allow negative values for Air Move modifier and Water Move modifiers. Reported by James W.</li>
 		<li>Combat Tab. Active Defenses. Hide checkbox when the Modify button is clicked. Reported by Charles.</li>
+		<li>Combat Tab. Active Defenses. Fix alignment issues. Verified on Chrome, Firefox, MS Edge (chromium)</li>
 	</ul>
 
 	<h4>Version: 2.3.1</h4>
