--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -2778,8 +2778,8 @@
 							<option value="-4">Unattractive (-1)</option>
 							<option value="0" selected="selected">Average</option>
 							<option value="4">Attractive (+1)</option>
-							<option value="12">Handsome (+4/2)</option>
-							<option value="16">Very Handsome (+6/2)</option>
+							<option value="12">Handsome/Beautiful (+4/2)</option>
+							<option value="16">Very Handsome/Beautiful (+6/2)</option>
 							<option value="20">Transcendent (+8/2)</option>
 						</select>
 					    <textarea name="attr_general_appearance" title="Macro name: appearance"></textarea>
