--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1,6 +1,7 @@
 <div class="sheet-table-row">
-    <label class="sheet-table-cell" style="width:22%;position:relative;top:-1.5rem;"><img src="http://imgsrv.roll20.net/?src=https://i.stack.imgur.com/CN5gs.png" style="max-height: 70px;" /></label>
+    <img src="http://imgsrv.roll20.net/?src=https://i.stack.imgur.com/CN5gs.png" style="max-height: 70px;" />
 </div>
+<br>
 
 <input type="radio" name="attr_tab11" class="sheet-tab sheet-tab1" value="1" checked/><span class="sheet-tab sheet-tab1">Character Sheet</span>&nbsp;
     <input type="radio" name="attr_tab11" class="sheet-tab sheet-tab2" value="2"/><span class="sheet-tab sheet-tab2">Monster Sheet</span>
