Changed range modifers from checkboxes into radio buttons, so only once can be selected at a time

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1670,14 +1670,14 @@
             <td><label><input type='checkbox' name='attr_dexbonus' title="@{dexbonus}" value='1' checked/><span></span></label></td>
             <td><input type="text" name="attr_weaponname2" title="@{weaponname2}" class="sheet-middle"></td>
             <td><label><input type="checkbox" name="attr_nonprof-attack2" title="@{nonprof-attack2}" value="1"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_pb-attack" title="@{pb-attack}" value="2"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_sr-attack" title="@{sr-attack}" value="0"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_mr-attack" title="@{mr-attack}" value="-2"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_lr-attack" title="@{lr-attack}" value="-5"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{range-mod-attack}" value="2"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{range-mod-attack}" value="0" checked/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{range-mod-attack}" value="-2"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{range-mod-attack}" value="-5"/><span></span></label></td>
             <td><input type="text" name="attr_attacknum2" title="@{attacknum2}" class="sheet-table-dynamic"></td>
             <td><input type="text" name="attr_attackadj2" title="@{attackadj2}" class="sheet-table-dynamic" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{ThAC02}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus})+((@{nonprof_penalty})*@{nonprof-attack2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus})+((@{nonprof_penalty})*@{nonprof-attack2})+(@{ranged-mod-attack}))+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{size2}" class="sheet-table-dynamic"></td>
@@ -1716,14 +1716,14 @@
             <td><label><input type='checkbox' name='attr_strbonus2' title="@{repeating_weapons2_$X_strbonus2}" value='1'/><span></span></label></td>
             <td><input type="text" name="attr_weaponname2" title="@{repeating_weapons2_$X_weaponname2}" class="sheet-middle"></td>
             <td><label><input type="checkbox" name="attr_nonprof-attack2" title="@{repeating_weapons2_$X_nonprof-attack2}" value="1"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_pb-attack" title="@{repeating_weapons2_$X_pb-attack}" value="2"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_sr-attack" title="@{repeating_weapons2_$X_sr-attack}" value="0"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_mr-attack" title="@{repeating_weapons2_$X_mr-attack}" value="-2"/><span></span></label></td>
-            <td><label><input type="checkbox" name="attr_lr-attack" title="@{repeating_weapons2_$X_lr-attack}" value="-5"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{repeating_weapons2_$X_range-mod-attack}" value="2"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{repeating_weapons2_$X_range-mod-attack}" value="0" checked/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{repeating_weapons2_$X_range-mod-attack}" value="-2"/><span></span></label></td>
+            <td><label><input type="radio" name="attr_range-mod-attack" title="@{repeating_weapons2_$X_range-mod-attack}" value="-5"/><span></span></label></td>
             <td><input type="text" name="attr_attacknum2" title="@{repeating_weapons2_$X_attacknum2}" class="sheet-table-dynamic"></td>
             <td><input type="text" name="attr_attackadj2" title="@{repeating_weapons2_$X_attackadj2}" class="sheet-table-dynamic" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{repeating_weapons2_$X_ThAC02}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus})+((@{nonprof_penalty})*@{nonprof-attack2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus})+((@{nonprof_penalty})*@{nonprof-attack2})+(@{range-mod-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{repeating_weapons2_$X_crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{repeating_weapons2_$X_range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{repeating_weapons2_$X_size2}" class="sheet-table-dynamic"></td>
@@ -2105,15 +2105,15 @@
                                                     <option value="2" title="Mastery: +2">Mastery</option>
                                             </select>
                                     </td>
-                                    <td><label><input type="checkbox" name="attr_pb-attack-po-a2" title="@{pb-attack-po-a2}" value="1"/><span></span></label></td>
-                                    <td><label><input type="checkbox" name="attr_sr-attack-po-a2" title="@{sr-attack-po-a2}" value="0"/><span></span></label></td>
-                                    <td><label><input type="checkbox" name="attr_mr-attack-po-a2" title="@{mr-attack-po-a2}" value="-2"/><span></span></label></td>
-                                    <td><label><input type="checkbox" name="attr_lr-attack-po-a2" title="@{lr-attack-po-a2}" value="-5"/><span></span></label></td>
-                                    <td><label><input type="checkbox" name="attr_er-attack-po-a2" title="@{er-attack-po-a2}" value="-10"/><span></span></label></td>
+                                    <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{ranged-mod-attack-po-a2}" value="1"/><span></span></label></td>
+                                    <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{ranged-mod-attack-po-a2}" value="0" checked/><span></span></label></td>
+                                    <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{ranged-mod-attack-po-a2}" value="-2"/><span></span></label></td>
+                                    <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{ranged-mod-attack-po-a2}" value="-5"/><span></span></label></td>
+                                    <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{ranged-mod-attack-po-a2}" value="-10"/><span></span></label></td>
                                     <td><input type="text" name="attr_attacknum-po-a2" title="@{attacknum-po-a2}" class="sheet-table-dynamic"></td>
                                     <td><input type="text" name="attr_attackadj-po-a2" title="@{attackadj-po-a2}" class="sheet-table-dynamic" value="0"></td>
                                     <td><input type="text" name="attr_ThAC0-po-a2" title="@{ThAC0-po-a2}" class="sheet-small" value="20"></td>
-                                    <td><button type="roll" name="roll_hit-po-a2" title="%{hit-po-a2}" value="/em hits an AC of [[@{ThAC0-po-a2}-(1d20cs>@{crit-thresh-po-a2}+([[(@{attackadj-po-a2})+((@{strengthhit})*@{strbonus-po-a2})+((@{dexmissile})*@{dexbonus-po-a2})+(@{prof-level-po-a2})+(@{pb-attack-po-a2})+(@{sr-attack-po-a2})+(@{mr-attack-po-a2})+(@{lr-attack-po-a2})+(@{er-attack-po-a2})+(@{banded-mail-po-a2})+(@{brigandine-po-a2})+(@{chainmail-bronzeplate-po-a2})+(@{field-plate-po-a2})+(@{full-plate-po-a2})+(@{leather-hide-padded-po-a2})+(@{plate-mail-po-a2})+(@{ring-mail-po-a2})+(@{scale-mail-po-a2})+(@{splint-mail-po-a2})+(@{studded-leather-po-a2})+(?{Misc. bonus|0})]]))]] using their @{weaponname-po-a2}">Hit</button></td>
+                                    <td><button type="roll" name="roll_hit-po-a2" title="%{hit-po-a2}" value="/em hits an AC of [[@{ThAC0-po-a2}-(1d20cs>@{crit-thresh-po-a2}+([[(@{attackadj-po-a2})+((@{strengthhit})*@{strbonus-po-a2})+((@{dexmissile})*@{dexbonus-po-a2})+(@{prof-level-po-a2})+(@{ranged-mod-attack-po-a2})+(@{banded-mail-po-a2})+(@{brigandine-po-a2})+(@{chainmail-bronzeplate-po-a2})+(@{field-plate-po-a2})+(@{full-plate-po-a2})+(@{leather-hide-padded-po-a2})+(@{plate-mail-po-a2})+(@{ring-mail-po-a2})+(@{scale-mail-po-a2})+(@{splint-mail-po-a2})+(@{studded-leather-po-a2})+(?{Misc. bonus|0})]]))]] using their @{weaponname-po-a2}">Hit</button></td>
                                     <td><input type="text" name="attr_crit-thresh-po-a2" title="@{crit-thresh-po-a2}" class="sheet-small" value="20"></td>
                                     <td><input type="text" name="attr_range-po-a2" title="@{range-po-a2}" class="sheet-mintext"></td>
                                     <td><input type="text" name="attr_size-po-a2" title="@{size-po-a2}" class="sheet-table-dynamic"></td>
@@ -2161,15 +2161,15 @@
                                                             <option value="2" title="Mastery: +2">Mastery</option>
                                                     </select>
                                             </td>
-                                            <td><label><input type="checkbox" name="attr_pb-attack-po-a2" title="@{repeating_weapons2_$X_pb-attack-po-a2}" value="1"/><span></span></label></td>
-                                            <td><label><input type="checkbox" name="attr_sr-attack-po-a2" title="@{repeating_weapons2_$X_sr-attack-po-a2}" value="0"/><span></span></label></td>
-                                            <td><label><input type="checkbox" name="attr_mr-attack-po-a2" title="@{repeating_weapons2_$X_mr-attack-po-a2}" value="-2"/><span></span></label></td>
-                                            <td><label><input type="checkbox" name="attr_lr-attack-po-a2" title="@{repeating_weapons2_$X_lr-attack-po-a2}" value="-5"/><span></span></label></td>
-                                            <td><label><input type="checkbox" name="attr_er-attack-po-a2" title="@{repeating_weapons2_$X_er-attack-po-a2}" value="-10"/><span></span></label></td>
+                                            <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{repeating_weapons2_$X_ranged-mod-attack-po-a2}" value="1"/><span></span></label></td>
+                                            <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{repeating_weapons2_$X_ranged-mod-attack-po-a2}" value="0" checked/><span></span></label></td>
+                                            <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{repeating_weapons2_$X_ranged-mod-attack-po-a2}" value="-2"/><span></span></label></td>
+                                            <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{repeating_weapons2_$X_ranged-mod-attack-po-a2}" value="-5"/><span></span></label></td>
+                                            <td><label><input type="radio" name="attr_ranged-mod-attack-po-a2" title="@{repeating_weapons2_$X_ranged-mod-attack-po-a2}" value="-10"/><span></span></label></td>
                                             <td><input type="text" name="attr_attacknum-po-a2" title="@{repeating_weapons2_$X_attacknum-po-a2}" class="sheet-table-dynamic"></td>
                                             <td><input type="text" name="attr_attackadj-po-a2" title="@{repeating_weapons2_$X_attackadj-po-a2}" class="sheet-table-dynamic" value="0"></td>
                                             <td><input type="text" name="attr_ThAC0-po-a2" title="@{repeating_weapons2_$X_ThAC0-po-a2}" class="sheet-small" value="20"></td>
-                                            <td><button type="roll" name="roll_hit-po-a2" title="%{repeating_weapons2_$X_hit-po-a2}" value="/em hits an AC of [[@{ThAC0-po-a2}-(1d20cs>@{crit-thresh-po-a2}+([[(@{attackadj-po-a2})+((@{strengthhit})*@{strbonus-po-a2})+((@{dexmissile})*@{dexbonus-po-a2})+(@{prof-level-po-a2})+(@{pb-attack-po-a2})+(@{sr-attack-po-a2})+(@{mr-attack-po-a2})+(@{lr-attack-po-a2})+(@{er-attack-po-a2})+(@{banded-mail-po-a2})+(@{brigandine-po-a2})+(@{chainmail-bronzeplate-po-a2})+(@{field-plate-po-a2})+(@{full-plate-po-a2})+(@{leather-hide-padded-po-a2})+(@{plate-mail-po-a2})+(@{ring-mail-po-a2})+(@{scale-mail-po-a2})+(@{splint-mail-po-a2})+(@{studded-leather-po-a2})+(?{Misc. bonus|0})]]))]] using their @{weaponname-po-a2}">Hit</button></td>
+                                            <td><button type="roll" name="roll_hit-po-a2" title="%{repeating_weapons2_$X_hit-po-a2}" value="/em hits an AC of [[@{ThAC0-po-a2}-(1d20cs>@{crit-thresh-po-a2}+([[(@{attackadj-po-a2})+((@{strengthhit})*@{strbonus-po-a2})+((@{dexmissile})*@{dexbonus-po-a2})+(@{prof-level-po-a2})+(@{ranged-mod-attack-po-a2})+(@{banded-mail-po-a2})+(@{brigandine-po-a2})+(@{chainmail-bronzeplate-po-a2})+(@{field-plate-po-a2})+(@{full-plate-po-a2})+(@{leather-hide-padded-po-a2})+(@{plate-mail-po-a2})+(@{ring-mail-po-a2})+(@{scale-mail-po-a2})+(@{splint-mail-po-a2})+(@{studded-leather-po-a2})+(?{Misc. bonus|0})]]))]] using their @{weaponname-po-a2}">Hit</button></td>
                                             <td><input type="text" name="attr_crit-thresh-po-a2" title="@{repeating_weapons2_$X_crit-thresh-po-a2}" class="sheet-small" value="20"></td>
                                             <td><input type="text" name="attr_range-po-a2" title="@{repeating_weapons2_$X_range-po-a2}" class="sheet-mintext"></td>
                                             <td><input type="text" name="attr_size-po-a2" title="@{repeating_weapons2_$X_size-po-a2}" class="sheet-table-dynamic"></td>
